Fixed issue where image with certain sizes would get stretched on product page.

--- a/client/src/pages/Product/Product.css
+++ b/client/src/pages/Product/Product.css
@@ -2,6 +2,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   max-width: 300px; 
   max-height: 300px;
 }
